--- a/static/jade/pages/sponsors.jade
+++ b/static/jade/pages/sponsors.jade
@@ -11,24 +11,26 @@ h2 Our sponsors
          #[a(href="/sponsorship.html") sponsorship packages].
 
 .container
+  h2 Platinum sponsor
   .gold
     .sponsor-placeholder
-      .sponsor
-        a.s-link.cfs(href='mailto:' + contactEmail)
-          | Become our the most exclusive Platinum sponsor!
+      a(href="https://skypicker.com", target="_blank")
+        img.img-responsive(src="https://cz.skypicker.com/images/about/skypicker-logo.png")
+
+  h2 Gold sponsors
   .silver
     .sponsor-placeholder
-      .sponsor
-        a.s-link.cfs(href='mailto:' + contactEmail)
-          | Shine as a Gold sponsor!
+      a(href="https://www.twisto.cz", target="_blank")
+        img.img-responsive(src="/static/images/sponsors/logo-twisto.jpg")
     .sponsor-placeholder
       .sponsor
         a.s-link(href='')
+
+  h2 Silver sponsors
   .bronze
     .sponsor-placeholder
-      .sponsor
-        a.s-link.cfs(href='mailto:' + contactEmail)
-          | Support us as a Silver sponsor!
+      a(href="https://imper.cz", target="_blank")
+        img.img-responsive(src="/static/images/sponsors/logo-imper.png")
     .sponsor-placeholder
       .sponsor
         a.s-link(href='')
