--- a/static/scss/pycon/_sponsors.scss
+++ b/static/scss/pycon/_sponsors.scss
@@ -1,4 +1,4 @@
-$gold-height: 300px;
+$gold-height: 200px;
 $silver-height: 200px;
 $bronze-height: 100px;
 
@@ -9,7 +9,14 @@ $sponsor-margin: 10px;
 .silver,
 .bronze {
   @include make-row();
-  display: none;
+  text-align: center;
+
+}
+
+h2{
+  text-align: center;
+  @include make-row();
+  margin-top: 40px;
 }
 
 .sponsor-placeholder {
