--- a/static/jade/pages/sponsors.jade
+++ b/static/jade/pages/sponsors.jade
@@ -11,20 +11,20 @@ h2 Our sponsors
          #[a(href="/sponsorship.html") sponsorship packages].
 
 .container
-  h2 Platinum sponsor
+  h3 Platinum sponsor
   .gold
-    .sponsor-placeholder
-      a(href="https://skypicker.com", target="_blank")
-        img.img-responsive(src="https://cz.skypicker.com/images/about/skypicker-logo.png")
+    .sponsor
+      a.sponsor.skypicker(href="https://skypicker.com", target="_blank")
+        img(src="https://cz.skypicker.com/images/about/skypicker-logo.png")
 
-  h2 Gold sponsors
+  h3 Gold sponsors
   .silver
-    .sponsor-placeholder
-      a(href="https://www.twisto.cz", target="_blank")
-        img.img-responsive(src="/static/images/sponsors/logo-twisto.jpg")
+    .sponsor
+      a.sponsor.twisto(href="https://www.twisto.cz", target="_blank")
+        img(src="/static/images/sponsors/logo-twisto.jpg")
 
-  h2 Silver sponsors
+  h3 Silver sponsors
   .bronze
-    .sponsor-placeholder
-      a(href="https://imper.cz", target="_blank")
-        img.img-responsive(src="/static/images/sponsors/logo-imper.png")
+    .sponsor
+      a.sponsor.imper(href="https://imper.cz", target="_blank")
+        img(src="/static/images/sponsors/logo-imper.png")
