--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -39,7 +39,7 @@
         our #[a(href="/sponsorship.html") sponsorship] packages and contact us
         directly.
     
-      h3 Where all the money goes?
+      h3 Where does all the money go?
       
       p.
         This is non-profit event run by volunteers and driven by the community.
