--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -1,7 +1,7 @@
 footer
   .container
     footer
-      a(href='/coc.html')
+      a(href='/'+year+'/coc.html')
         | Code of Conduct
 
       p.psf-trademark
@@ -11,5 +11,5 @@ footer
         | .
 
       p
-        a(href="mailto:info@pycon.cz")
+        a(href="mailto:"+contactEmail)
           | Feel free to contact us!
