--- a/static/jade/components/logo.jade
+++ b/static/jade/components/logo.jade
@@ -3,7 +3,7 @@
     h1
       span.label PyCon CZ 2015
       //- img.python-logo(src="/static/images/pycon-cz-logo.png")
-      img.python-logo.img-responsive(alt="PyCon CZ", src="/static/images/pycon-cz-logo.svg", onerror="this.onerror = null; this.src = '/static/images/pycon-cz-logo.png'")
+      img.python-logo.img-responsive(alt="PyCon CZ", src='/'+year+"/static/images/pycon-cz-logo.svg", onerror="this.onerror = null; this.src = '/2015/static/images/pycon-cz-logo.png'")
     .row
       .col-md-6
         p.event-location Brno, Czech Republic
