--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -7,22 +7,22 @@ div
           .icon-bar
           .icon-bar
           .icon-bar
-        a.navbar-brand(href="/") PyCon CZ
+        a.navbar-brand(href="/"+year+'/') PyCon CZ
 
       .collapse.navbar-collapse#main-navbar
         ul.nav.navbar-nav
           li
-            a(href='/#speakers') Speakers
+            a(href='/'+year+'/#speakers') Speakers
           li
-            a(href='/#schedule') Schedule
+            a(href='/'+year+'/#schedule') Schedule
           li
-            a(href='/#tickets') Tickets
+            a(href='/'+year+'/#tickets') Tickets
           li
-            a(href='/#sponsors') Sponsors
+            a(href='/'+year+'/#sponsors') Sponsors
           li
-            a(href='/team.html') Team
+            a(href='/'+year+'/team.html') Team
           li
-            a(href='/#venue') Venue
+            a(href='/'+year+'/#venue') Venue
         ul.right.nav
           li
             a(href='https://twitter.com/pyconcz', target='_blank')
