--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -1,52 +1,50 @@
--var ticketsLink = "https://ti.to/pyvec/pycon-cz-2015/"
-
 .container
-  
+
   .row
     .col-md-12
       h2 Tickets
-      
+
       p.lead
         a.tickets-link(href=ticketsLink) Ticket sales
-        |  are now open. We have rates for individuals, corporate 
-        | attendees and also for students. It's simple: We want you all to 
-        | attend the first year edition of #[strong PyCon CZ]. 
-      
+        |  are now open. We have rates for individuals, corporate
+        | attendees and also for students. It's simple: We want you all to
+        | attend the first year edition of #[strong PyCon CZ].
+
       .tickets-join
         a.btn-tickets(href=ticketsLink) Join us now!
-      
+
       h3 What's included in ticket price
-      
+
       ul.ticket-features
         li all #[strong two days] of the event - talks, sprints and workshops
         li lunch and refreshments on both days
         li delicious #[strong coffee] with awesome #[strong Czech cakes] during breaks
         li t-shirt, full bag of conference swag and gifts
-    
+
       p.
         Accomodation and travel costs are not covered. However, we'll try to
         find you the best hotel deals in Brno.
-        
+
       h3 What ticket is the right for me?
-      
+
       p.
         We try to keep the ticket prices as low as possible. Every corporate
         ticket allows us to issue two #[strong Student] tickets. If you employer
         is paying for your ticket, please select a #[strong Corporate] rate.
-      
+
       p.
         Do you want to buy more than 10 tickets for your employees? Consider
-        our #[a(href="/sponsorship.html") sponsorship] packages and contact us
+        our #[a(href='/'+year+"/sponsorship.html") sponsorship] packages and contact us
         directly.
-    
+
       h3 Where does all the money go?
-      
+
       p.
         This is non-profit event run by volunteers and driven by the community.
         #[strong Everything] we receive from your ticket purchases goes
         directly towards the costs of running the event and making it enjoyable
         and memorable for all attendees.
-      
+
 
       //script(src="https://js.tito.io/v1", async)
       //tito-widget(event="pyvec/pycon-cz-2015", ssl-check-disabled)
