--- a/static/jade/real_pages/sponsorship.jade
+++ b/static/jade/real_pages/sponsorship.jade
@@ -1,3 +1,4 @@
+include ../components/vars
 doctype html
 html(lang='en-us')
   head
@@ -9,7 +10,7 @@ html(lang='en-us')
       h2.text-center Become our partner
       .row
         .col-md-8.col-md-push-2
-          p.lead #[a(href="/", ) PyCon CZ] is a two-day conference organized by the Python community for the Python community. The conference will include 1 full day of talks featuring 2 international keynote speakers (all sessions will be held in English), and 1 day of sprints and workshops where Pythonistas can get together and work on their open source projects.
+          p.lead #[a(href='/'+year+"/", ) PyCon CZ] is a two-day conference organized by the Python community for the Python community. The conference will include 1 full day of talks featuring 2 international keynote speakers (all sessions will be held in English), and 1 day of sprints and workshops where Pythonistas can get together and work on their open source projects.
           p.lead This year is the first edition of PyCon CZ, and we look forward to bringing the tradition of diverse and insightful speakers, top-quality venues, and a great atmosphere to the Czech Republic. Regional PyCons are well-known for attracting developers, sysadmins, writers, designers, and community members from all over.
           p.lead These packages are recommendations for your company or organization. If you would like to contribute a different amount or alternative sponsorship format, please let us know and we’ll be happy to discuss custom packages.
 
