--- a/static/jade/real_pages/team.jade
+++ b/static/jade/real_pages/team.jade
@@ -1,3 +1,4 @@
+include ../components/vars
 doctype html
 html(lang='en-us')
   head
@@ -26,7 +27,7 @@ html(lang='en-us')
           p.description Tickets &amp; Mentoring
 
         .col-md-3
-          img(src='/static/images/team/natali.jpg', alt='')
+          img(src='/'+year+'/static/images/team/natali.jpg', alt='')
           p.name
             #[a(href="https://www.facebook.com/natali.debosque", target="_blank") Natália Sedláková]
           p.description DjangoGirls organizer
@@ -57,19 +58,19 @@ html(lang='en-us')
           p.description Speakers
       .row
         .col-md-3
-          img(src='/static/images/team/petr.jpg', alt='')
+          img(src='/'+year+'/static/images/team/petr.jpg', alt='')
           p.name
             #[a(href="http://encukou.cz", target="_blank") Petr Viktorin]
           p.description Sprints &amp; Workshops
 
         .col-md-3
-          img(src='/static/images/team/vehrlich.jpg', alt='')
+          img(src='/'+year+'/static/images/team/vehrlich.jpg', alt='')
           p.name
             #[a(href="https://twitter.com/melront", target="_blank") Václav Ehrlich ]
           p.description Photographer
 
         .col-md-3
-          img(src='/static/images/team/chris.jpg', alt='')
+          img(src='/'+year+'/static/images/team/chris.jpg', alt='')
           p.name
             #[a(href="https://twitter.com/kejbaly2", target="_blank") Chris Ward]
           p.description Sponsors
