Added info about second track.

--- a/static/jade/pages/speakers.jade
+++ b/static/jade/pages/speakers.jade
@@ -51,19 +51,12 @@
 
   .row.cfp
     .col-md-8.col-md-push-2
-      h3 What about #[u you]? Wanna get on stage?
+      h3 Final schedule comming soon!
       p.lead.
         PyCon CZ is community-driven event focused on Python programming language.
         We would like to gather the most interesting talks from various fields.
         
-      p.lead
-        | If you think you have something awesome to say, 
-        a.cfp-link(href='http://goo.gl/forms/8Tc22glxxc', target='_blank') submit your talk
-        | .
-      
-      p.lead
-        | Call for speakers closes on 
-        strong 28th September
-        |  and all talks will be announced one week after - on 
-        strong 5th October
-        | . Stay tuned!
+      p.lead.alert-success.alert.
+        Call for papers was so successful that we've decided to open #[b second track]
+        of talks. This requires an extra work and more preparations, so we're going
+        to postpone announcement of final schedule. Schould be ready on #[b Friday 9th October]. Stay tuned!
