--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -1,25 +1,30 @@
-@import 'bootstrap';
-@import 'pycon/sponsors';
-@import 'pycon/map';
-@import 'pycon/speakers';
-@import 'pycon/timeline';
-@import 'pycon/tickets';
-@import 'pycon/team';
-@import 'pycon/coc';
-@import 'pycon/getting_here';
-@import 'pycon/sponsorship';
+@import "bootstrap/normalize";
+@import "variables";
+
+@import "pycon/navbar";
+
+// @import "pycon/sponsors";
+// @import "pycon/map";
+// @import "pycon/speakers";
+// @import "pycon/timeline";
+// @import "pycon/tickets";
+// @import "pycon/team";
+// @import "pycon/coc";
+// @import "pycon/getting_here";
+// @import "pycon/sponsorship";
 @import url(https://fonts.googleapis.com/css?family=Amatic+SC:700);
 
 @font-face {
-  font-family: 'Amatic';
+  font-family: "Amatic";
   font-style: normal;
   font-weight: 700;
-  src: local('Amatic SC Bold'), local('AmaticSC-Bold'), url(https://fonts.gstatic.com/s/amaticsc/v7/IDnkRTPGcrSVo50UyYNK75S3E-kSBmtLoNJPDtbj2Pk.ttf) format('truetype');
+  src: local("Amatic SC Bold"), local("AmaticSC-Bold"), url(https://fonts.gstatic.com/s/amaticsc/v7/IDnkRTPGcrSVo50UyYNK75S3E-kSBmtLoNJPDtbj2Pk.ttf) format("truetype");
 }
 
 html,
 body {
-  position: relative;
+  overflow: hidden;
+  width: 100%;
   height: 100%;
 }
 
@@ -27,71 +32,72 @@ body {
   padding-top: $navbar-height;
 }
 
-section {
-  position: relative;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-h2 {
-  margin-bottom: 50px;
-  font-weight: 500;
-  font-size: 2.8em;
-  text-align: center;
-}
-
-.container {
-    @media (min-width: $screen-md) {
-      width: 80%;
-      margin: 0 auto;
-    }
-}
-
-.jumbotron {
-  margin-bottom: 0;
-  font-family: "Amatic SC", "Helvetica Neue", "Helvetica", sans-serif;
-  text-align: center;
-
-  h1 .label {
-    display: none;
-  }
-
-  .python-logo {
-    $logo-size: 300px;
-    max-height: $logo-size;
-    margin: 0 auto;
-  }
-
-  .event-date,
-  .event-location {
-    font-weight: bold;
-    font-size: 40px;
-
-    @media (min-width: $screen-xs) {
-      font-size: 60px;
-    }
-  }
-}
-
-.lead {
-  font-size: 1.3em;
-  text-align: left;
-}
-
-.claim {
-  padding: $jumbotron-padding;
-  color: $jumbotron-color;
-  background: $claim-bg;
-
-  font-size: $jumbotron-font-size;
-
-  .lead {
-    margin: 0;
-    text-align: center;
-  }
-}
-
-footer {
-  padding: 20px 0;
-  line-height: 2;
-}
+//
+// section {
+//   position: relative;
+//   width: 100%;
+//   margin-bottom: 20px;
+// }
+//
+// h2 {
+//   margin-bottom: 50px;
+//   font-weight: 500;
+//   font-size: 2.8em;
+//   text-align: center;
+// }
+//
+// .container {
+//     @media (min-width: $screen-md) {
+//       width: 80%;
+//       margin: 0 auto;
+//     }
+// }
+//
+// .jumbotron {
+//   margin-bottom: 0;
+//   font-family: "Amatic SC", "Helvetica Neue", "Helvetica", sans-serif;
+//   text-align: center;
+//
+//   h1 .label {
+//     display: none;
+//   }
+//
+//   .python-logo {
+//     $logo-size: 300px;
+//     max-height: $logo-size;
+//     margin: 0 auto;
+//   }
+//
+//   .event-date,
+//   .event-location {
+//     font-weight: bold;
+//     font-size: 40px;
+//
+//     @media (min-width: $screen-xs) {
+//       font-size: 60px;
+//     }
+//   }
+// }
+//
+// .lead {
+//   font-size: 1.3em;
+//   text-align: left;
+// }
+//
+// .claim {
+//   padding: $jumbotron-padding;
+//   color: $jumbotron-color;
+//   background: $claim-bg;
+//
+//   font-size: $jumbotron-font-size;
+//
+//   .lead {
+//     margin: 0;
+//     text-align: center;
+//   }
+// }
+//
+// footer {
+//   padding: 20px 0;
+//   line-height: 2;
+// }
