--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -5,11 +5,9 @@ html(lang='en-us')
   head
     include components/meta
   body.home(data-spy='scroll', data-target='#main-navbar', data-offset="60")
-    include components/header
+    include components/navbar
 
-    //
-    //- section#section-home.home
-    //-   include ./pages/home
+    include pages/home/pycon
     //- section#speakers.speakers
     //-   include ./pages/speakers
     //- section#schedule.timeline
