Added new claim section.

--- a/static/jade/pages/home/pycon.jade
+++ b/static/jade/pages/home/pycon.jade
@@ -12,9 +12,9 @@
   .pycon-info
     p.pycon-location Brno, Czech Republic
     p.pycon-date November 14-15
-//- 
-//- .claim
-//-   .container
-//-     p.lead
-//-       | The very first Python conference in the Czech Republic.
-//-       | Join us for a fun weekend full of talks and sprints about Python and Python-related topics.
+
+.claim
+  .container
+    p.
+      The very first #[strong PyCon] in the #[strong Czech Republic]. Join us
+      for a fun weekend full of talks, sprints and workshops about Python.
