--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -4,7 +4,9 @@
 $brand-primary: #1e5493;
 $brand-secondary: #d52034;
 $brand-silent: #d1d1d1;
+
 $text-color: #646464;
+$text-inverted: #fff;
 
 $navbar-height: 60px;
 
