--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -31,6 +31,8 @@ body {
 
 body {
   padding-top: $navbar-height;
+  font-weight: 300;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, sans-serif;
 }
 
 h1 {
