Added program section.

--- a/static/jade/pages/home/pycon.jade
+++ b/static/jade/pages/home/pycon.jade
@@ -18,3 +18,19 @@
     p.
       The very first #[strong PyCon] in the #[strong Czech Republic]. Join us
       for a fun weekend full of talks, sprints and workshops about Python.
+
+.container
+  .program
+    .program-item
+      h2 Talks
+      .date Saturday 14th
+      p.
+        #[strong One] day, #[strong two] parallel tracks, #[strong two] kenotes
+        and #[strong ten] awesome talks. Community, web, hardware, science, devops and more.
+    
+    .program-item
+      h2 Sprints &amp; workshops
+      .date Sunday 15th
+      p.
+        #[strong Six] workshops in #[strong two] blocks and sprinting all day long. Hack on
+        open-source projects together with other Python community members.
