Added registratio Call to Action.

--- a/static/jade/pages/home/pycon.jade
+++ b/static/jade/pages/home/pycon.jade
@@ -34,3 +34,7 @@
       p.
         #[strong Six] workshops in #[strong two] blocks and sprinting all day long. Hack on
         open-source projects together with other Python community members.
+  
+  .registration
+    h2 Registration is now open
+    p.lead Get your ticket now and be part of the first PyCon CZ!
