--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -9,6 +9,7 @@ html(lang='en-us')
 
     .viewport
       include pages/home/pycon
+      include components/footer
     //- section#speakers.speakers
     //-   include ./pages/speakers
     //- section#schedule.timeline
@@ -19,6 +20,5 @@ html(lang='en-us')
     //-   include ./pages/sponsors
     //- section#venue.map
     //-   include ./pages/map
-    //- 
-    //- include components/footer
+
     //- include components/js
