--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -6,6 +6,7 @@
 @import "bootstrap/grid";
 
 @import "pycon/navbar";
+@import "pycon/footer";
 @import "pycon/home";
 
 // @import "pycon/sponsors";
