Added tito widget.

--- a/static/jade/pages/home/pycon.jade
+++ b/static/jade/pages/home/pycon.jade
@@ -38,3 +38,5 @@
   .registration
     h2 Registration is now open
     p.lead Get your ticket now and be part of the first PyCon CZ!
+    .tito
+      tito-widget(event="pyvec/pycon-cz-2015")
