--- a/static/jade/components/vars.jade
+++ b/static/jade/components/vars.jade
@@ -1,3 +1,4 @@
 - var contactEmail = "info@pycon.cz"
 - var year = "2015"
 - var ticketsLink = "https://ti.to/pyvec/pycon-cz-2015/"
+- var urlBase = "https://cz.pycon.org/" + year + "/"
