Fixed sticky footer.

--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -18,16 +18,13 @@ $brand-silent: #d1d1d1;
 $text-color: #646464;
 $text-inverted: #fff;
 
+$navbar-bg: rgba(255, 255, 255, 0.97);
+
+// Dimensions
+
 $navbar-height: 60px;
+$footer-height: 280px;
 
 // Theme overrides
-
-$speakers-social-link-color: #aaa;
-
-//map
-$map-height: 400px;
-$text-shadow-color: #ccc;
-
-$images-size: 150px;
 
 $font-size-base: 16px;
