Added linear branch of talks.

--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -18,6 +18,8 @@ $brand-silent: #d1d1d1;
 $text-color: #646464;
 $text-inverted: #fff;
 
+$commit-line: #dfdfdf;
+
 $navbar-bg: rgba(255, 255, 255, 0.97);
 
 // Dimensions
